# hidden-trait

./: Cargo.toml  README.md
.github/workflows/: check.yaml
examples/: main.rs
src/: lib.rs
