[package]
name = "hidden-trait"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Proc macro for exposing a trait implementation"
repository = "https://github.com/kvark/hidden-trait"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1"
quote = "1.0"